--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="static/css/style.css" type="text/css" media="screen" />
+  <style>
+    span.reference{
+      position:fixed;
+      top:10px;
+      right:10px;
+      font-size:9px;
+    }
+    span.reference a{
+      color:#aaa;
+      text-decoration:none;
+      text-transform:uppercase;
+      margin-left:10px;
+    }
+    span.reference a:hover{
+      color:#ddd;
+    }
+  </style>
   <title>Birthe Diget</title>
 </head>
-<body>
-  <div id="st_main" class="st_main">
-    <img class="st_preview" style="display: none" />
-		<div class="st_overlay" style="display: none"></div>
-		<h1>Birthe Diget</h1>
-		<div id="st_loading" class="st_loading"><span>Loading...</span></div>
-		<ul id="st_nav" class="st_navigation">
-		  <li>
-      	<span class="st_link">Kontakt<span class="st_arrow_down"></span></span>
-				<div class="st_about st_thumbs_wrapper">
-					<div class="st_subcontent">
-						<p>
-						 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut mi ante, nec porta erat. Fusce malesuada libero ut dui elementum facilisis.
-						</p>
-						<p>
-						  Pellentesque eros arcu, sodales in vehicula a, auctor quis justo. Nulla eget nisi congue ligula elementum commodo.
-						</p>
-					</div>
-				</div>
-			</li>
-		</ul>
+<body>	
+	<div id="ps_slider" class="ps_slider">
+		<a class="prev disabled"></a>
+		<a class="next disabled"></a>
+		<div id="ps_albums">
+		</div>	
 	</div>
-	<div>
-	  <span class="reference">&copy; Copyright 2012 Birthe Diget. All rights reserved.</span>
-  </div>
-  <script src="js/client.js" type="text/javascript"></script>
+	
+	<div id="ps_overlay" class="ps_overlay" style="display:none;"></div>
+	<a id="ps_close" class="ps_close" style="display:none;"></a>
+	<div id="ps_container" class="ps_container" style="display:none;">
+		<a id="ps_next_photo" class="ps_next_photo" style="display:none;"></a>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="static/js/client.js" type="text/javascript"></script>
 </body>
 </html>
